fix #17 - Vault Name is not Showing Properly in Spaces

--- a/theme.css
+++ b/theme.css
@@ -1495,8 +1495,17 @@ body.enable-alternative-checkboxes li[data-task='b'] > p > input:checked {
 .theme-dark .callout[data-callout-metadata] .callout-content {color: rgba(255, 255, 255, .85);}
 
 
+/* ─────────────────────────────────────────────────── */
+/* CUSTOM MAKE MD
+/* ─────────────────────────────────────────────────── */
+.mk-tree-section .mk-tree-text {
+  flex-basis: 100%;
+}
 
-/*** TODOIST PLUGIN ****/
+/* ─────────────────────────────────────────────────── */
+/* CUSTOM TODOIST PLUGIN                             */
+/* ─────────────────────────────────────────────────── */
+
 .todoist-query-title {
   display: inline !important;
 }
